--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,11 @@
 .text-white{
   color: #fff;
 }
+
+.swipper-parent{
+  /* overflow-x: hidden; */
+}
+.lazy-load-image-background{
+  height: 100%;
+  width: 100%;
+}
