--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "tailwindcss";
+
+* {
+  font-family: "Nunito", sans-serif;
+}
 
 .container {
   max-width: 1190px;
@@ -6,23 +11,20 @@
   margin-inline: auto;
   padding-inline: 15px;
 }
-.text-black{
+.text-black {
   color: #333;
 }
-.bg-light{
-  background-color: #FFE0B2 ;
+.bg-light {
+  background-color: #ffe0b2;
 }
-.bg-color{
-  background-color: #8BC34A;
+.bg-color {
+  background-color: #8bc34a;
 }
-.text-white{
+.text-white {
   color: #fff;
 }
 
-.swipper-parent{
-  /* overflow-x: hidden; */
-}
-.lazy-load-image-background{
+.lazy-load-image-background {
   height: 100%;
   width: 100%;
 }
