--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;800;900&display=swap);
 @import "tailwindcss";
 
 * {
@@ -27,4 +28,8 @@
 .lazy-load-image-background {
   height: 100%;
   width: 100%;
+}
+
+.tort-font {
+  font-family: "Montserrat", sans-serif;
 }
